<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/judul"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:textSize="40sp"
        android:text="@string/form_data"/>

    <TextView
        android:id="@+id/label_nama"
        app:layout_constraintTop_toBottomOf="@id/judul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/nama"/>

    <EditText
        android:id="@+id/input_nama"
        app:layout_constraintTop_toBottomOf="@id/label_nama"
        android:layout_marginBottom="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/label_tempat_lahir"
        app:layout_constraintTop_toBottomOf="@id/input_nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/tempat_lahir"/>

    <EditText
        android:id="@+id/input_tempat_lahir"
        app:layout_constraintTop_toBottomOf="@id/label_tempat_lahir"
        android:layout_marginBottom="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/label_tanggal_lahir"
        app:layout_constraintTop_toBottomOf="@id/input_tempat_lahir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/tanggal_lahir"/>

    <EditText
        android:id="@+id/input_tanggal_lahir"
        app:layout_constraintTop_toBottomOf="@id/label_tanggal_lahir"
        android:layout_marginBottom="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/btn_kembali"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_submit"
        android:backgroundTint="#FF0000"
        android:textColor="@color/white"
        android:text="@string/kembali"/>
    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/input_tanggal_lahir"
        android:text="@string/submit_data_form"/>



</androidx.constraintlayout.widget.ConstraintLayout>