<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".WelcomeActivity">

    <TextView
        android:id="@+id/Welcome"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:layout_marginTop="100dp"
        android:textSize="40sp"
        android:text="@string/Judul"/>

    <TextView
        android:id="@+id/Tagline"
        app:layout_constraintTop_toBottomOf="@id/Welcome"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:text="@string/tagline"/>

    <Button
        android:id="@+id/btn_start"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Mulai"/>

</androidx.constraintlayout.widget.ConstraintLayout>